--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  width: min(20em, 90%);
+  height: 60vh;
+  background-color: cadetblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #130f40;
+  border-radius: 0.3em;
+}
+#root .App {
+  width: 280px;
+}
+
+#root .App h2 {
+  text-align: center;
+  margin-top: 0;
+}
+
+#root .App p {
+  text-align: center;
+  margin-top: 2em;
+}
+
+#root .App .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#root .App .btn .jokes-btn {
+  padding: 0.5em 1em;
+  color: #130f40;
+  font-weight: 600;
+  background-color: #32ff7e;
+  border: 0;
+  box-shadow: 1px 1px 25px 1px #32ff7e;
+  margin-top: 2em;
+  border-radius: 0.3em;
+  transition: all 0.2s ease-in-out;
+}
+
+#root .App .btn .jokes-btn:hover {
+  background-color: #fab1a0;
+  box-shadow: 1px 1px 25px 1px #fab1a0;
+  cursor: pointer;
+  color: white;
+}
+
+#root .App .btn .jokes-btn:active {
+  transform: scale(0.9, 0.9);
+}
+
+#root .App .btn .jokes-btn:focus {
+  outline: none;
 }
